[workspace.package]
authors = ["Vadim Smirnov <ukint-vs@proton.me>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[package]
name = "hikikomori-program"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
hikikomori-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
hikikomori-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
members = ["state", "xtask"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.1.1" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.1.1" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.2.0" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.1" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.1.1" }
hikikomori-io.path = "io"
tokio = "1"
xshell = "0.2"
anyhow = "1"
